--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ form{
     color: rgb(104, 6, 134);
 }
     </style>
-<body><center>
+<body>
     <h1>Employee Form</h1>
     <form>
         <label for="fname">Enter your name:</label>
@@ -44,7 +44,5 @@ form{
         </select>
         <input type="submit">submit
     </form>
-
-</center>
 </body>
 </html>
