--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body><center>
+<link rel="stylesheet" href="index1.css">                                                        
+<body>
     <h1>Employee Form</h1>
     <form>
         <label for="fname">Enter your name:</label>
@@ -33,6 +34,5 @@
         <input type="submit">submit
     </form>
 
-</center>
 </body>
 </html>
